Conduct & Inclusion Pages added

--- a/layouts/partials/diversity-inclusion.html
+++ b/layouts/partials/diversity-inclusion.html
@@ -1,9 +1,9 @@
 {{ "<!-- Diversity -->" | safeHTML }}
-<section id="diversity" {{ if .Site.Params.diversity.bg }} class="bg-light-gray" {{ end }}>
-    <div class="container">
+<div class="container">
+    <section id="diversity" {{ if .Site.Params.inclusion.bg }} class="bg-light-gray" {{ end }}>
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Our commitments to diversity and inclusion</h2>
+                <h2 class="section-heading">Our commitment to diversity and inclusion</h2>
             </div>
             <div>
                 <p>The best conferences are the ones where everyone participates. </p>
@@ -84,12 +84,12 @@
                             <a href="https://extra-arms.com/">Extra Arms</a>
                         </li>
                         <li>
-                            <a href="https://www.babysitter-express.de/">Babysitter Express</a> 
+                            <a href="https://www.babysitter-express.de/">Babysitter Express</a>
                         </li>
                     </ul>
                 </p>
                 <p><strong>Quiet room</strong>
-                    We have a quiet room available where participants and speakers can retreat, if needed.   
+                    We have a quiet room available where participants and speakers can retreat, if needed.
                 </p>
 
                 <h4 id="whatisunderconstruction">What is under construction</h4>
@@ -134,5 +134,5 @@
                     Currently, we don’t have plans to offer transcripts and translations on published talks. </p>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+</div>
