--- a/layouts/partials/code-of-conduct.html
+++ b/layouts/partials/code-of-conduct.html
@@ -1,9 +1,10 @@
-{{ "<!-- Diversity -->" | safeHTML }}
-<section id="diversity" {{ if .Site.Params.diversity.bg }} class="bg-light-gray" {{ end }}>
-    <div class="container">
+{{ "<!-- Conduct -->" | safeHTML }}
+<div class="container">
+
+    <section id="code-of-conduct" {{ if .Site.Params.conduct.bg }} class="bg-light-gray" {{ end }}>
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">{{ with .Site.Params.diversity.title }}{{ . | markdownify }}{{ end }}</h2>
+                <h2 class="section-heading">{{ with .Site.Params.conduct.title }}{{ . | markdownify }}{{ end }}</h2>
             </div>
             <div>
 
@@ -123,5 +124,6 @@
                 <p>This policy is licensed under the Creative Commons Zero license.</p>
             </div>
         </div>
-    </div>
-</section>
+
+    </section>
+</div>
