--- a/static/css/satrday.css
+++ b/static/css/satrday.css
@@ -1,3 +1,31 @@
+/* universal: container top padding because of sticky header nav */
+
+body {
+    font-size: 1.4em;
+}
+
+p {
+    font-size: 1.4em;
+}
+
+ol,
+ul {
+    margin-top: 1.4em;
+    margin-bottom: 1.4em;
+}
+
+.text-muted {
+    font-size: 1em;
+}
+
+.container>section {
+    margin-top: 2em;
+}
+
+section h2.section-heading {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
 
 .client-tier-1 {
     max-width: 80vw;
@@ -217,6 +245,16 @@ h4,
 h5,
 h6 {
     font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin-top: 1.6em;
+    margin-bottom: 1.2em;
+}
+
+h3 {
+    font-size: 1.8em;
+}
+
+h4 {
+    font-size: 1.6em;
 }
 
 #location > div > div.row > div > h3 {
@@ -671,15 +709,40 @@ canvas {
 
 /* Custom */
 
-#diversity p {
-    font-size: 12pt;
+blockquote {
+    font-size: 1.6em;
+    padding: 1em 15px;
+    background-color: white;
+}
+
+#conduct p {
+    font-size: 1.4em;
     padding: 0 15px;
+}
+
+#code-of-conduct,
+#diversity {
+    max-width: 970px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#code-of-conduct p,
+#diversity p {
+    font-size: 1.4em;
+}
+
+#code-of-conduct li,
+#diversity li {
+    font-size: 1.4em;
+    margin-bottom: 0.75em;
 }
 
 #scholarships p {
     font-size: 14pt;
     padding: 0 15px;
 }
+
 #scholarships li {
     font-size: 14pt;
     padding: 0 15px;
