--- a/layouts/index.html
+++ b/layouts/index.html
@@ -51,8 +51,8 @@
       {{ partial "contact.html" . }}
     {{ end }}
 
-    {{ if .Site.Params.diversity.enable }}
-      {{ partial "diversity.html" . }}
+    {{ if .Site.Params.contact.enable }}
+    {{ partial "contact" . }}
     {{ end }}
 
     {{ if .Site.Params.conduct.enable }}
