--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
+
 <head>
-  {{ partial "head.html" . }}
+    {{ partial "head" . }}
 </head>
-  <body id="page-top" class="index">
-    {{ partial "nav.html" . }}
-    {{ partial "hero.html" . }}
+
+<body id="page-top" class="index">
+    {{ partial "nav" . }}
+    {{ partial "hero" . }}
 
     {{ if .Site.Params.services.enable }}
-      {{ partial "services.html" . }}
+    {{ partial "services" . }}
     {{ end }}
 
     {{ if .Site.Params.tito.enable }}
-    {{ partial "tito.html" . }}
+    {{ partial "tito" . }}
     {{ end }}
 
     {{ if .Site.Params.eventbrite.enable }}
-      {{ partial "eventbrite.html" . }}
+    {{ partial "eventbrite" . }}
     {{ end }}
 
     {{ if .Site.Params.tickettailor.enable }}
-    {{ partial "tickettailor.html" . }}
+    {{ partial "tickettailor" . }}
     {{ end }}
 
     {{ if .Site.Params.callforpapers.enable }}
-      {{ partial "callforpapers.html" . }}
+    {{ partial "callforpapers" . }}
     {{ end }}
 
     {{ if .Site.Params.portfolio.enable }}
-      {{ partial "portfolio.html" . }}
+    {{ partial "portfolio" . }}
     {{ end }}
 
     {{ if .Site.Params.schedule.enable }}
-      {{ partial "schedule.html" . }}
+    {{ partial "schedule" . }}
     {{ end }}
 
     {{ if .Site.Params.about.enable }}
-      {{ partial "about.html" . }}
+    {{ partial "about" . }}
     {{ end }}
 
     {{ if .Site.Params.location.enable }}
@@ -44,11 +46,7 @@
     {{ end }}
 
     {{ if .Site.Params.clients_list.enable }}
-      {{ partial "clients.html" . }}
-    {{ end }}
-    
-    {{ if .Site.Params.contact.enable }}
-      {{ partial "contact.html" . }}
+    {{ partial "clients" . }}
     {{ end }}
 
     {{ if .Site.Params.contact.enable }}
@@ -60,13 +58,14 @@
     {{ end }}
 
     {{ if .Site.Params.footer.enable }}
-      {{ partial "footer.html" . }}
+    {{ partial "footer" . }}
     {{ end }}
 
     {{ if .Site.Params.portfolio.enable }}
-      {{ partial "modals.html" . }}
+    {{ partial "modals" . }}
     {{ end }}
 
-    {{ partial "js.html" . }}
-  </body>
+    {{ partial "js" . }}
+</body>
+
 </html>
