--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -5,8 +5,9 @@
             <div class="intro-lead-in">{{ with .Site.Params.hero.title }}{{ . | markdownify }}{{ end }}</div>
             <div class="intro-heading">{{ with .Site.Params.hero.subtitle }}{{ . | markdownify }}{{ end }}</div>
             <div class="intro-lead-in">{{ with .Site.Params.meta_description }}{{ . | markdownify }}{{ end }}</div>
-            <a href="#services" class="page-scroll btn btn-xl">{{ with .Site.Params.hero.buttonText }}{{ . }}{{ end }}</a>
-            <a href="#tickettailor" class="page-scroll btn btn-xl" id="btn-register">Register</a>
+            <a href="{{ with .Site.Params.hero.buttonTarget }}{{ . }}{{ end }}"
+                class="page-scroll btn btn-xl">{{ with .Site.Params.hero.buttonText }}{{ . }}{{ end }}</a>
+            <!-- <a href="#tickettailor" class="page-scroll btn btn-xl" id="btn-register">Register</a> -->
         </div>
     </div>
 </header>
