--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -1,13 +1,27 @@
 {{ "<!-- Hero -->" | safeHTML }}
 <header>
-    <div class="container" id="Shade">
-        <div class="intro-text">
-            <div class="intro-lead-in">{{ with .Site.Params.hero.title }}{{ . | markdownify }}{{ end }}</div>
-            <div class="intro-heading">{{ with .Site.Params.hero.subtitle }}{{ . | markdownify }}{{ end }}</div>
-            <div class="intro-lead-in">{{ with .Site.Params.meta_description }}{{ . | markdownify }}{{ end }}</div>
-            <a href="{{ with .Site.Params.hero.buttonTarget }}{{ . }}{{ end }}"
-                class="page-scroll btn btn-xl">{{ with .Site.Params.hero.buttonText }}{{ . }}{{ end }}</a>
-            <!-- <a href="#tickettailor" class="page-scroll btn btn-xl" id="btn-register">Register</a> -->
+  <div class="container" id="Shade">
+    <div class="intro-block">
+      <div class="intro-text">
+        <div class="intro-lead-in">
+          {{ with .Site.Params.hero.title }}{{ . | markdownify }}{{ end }}</div>
+        <div class="intro-heading">
+          {{ with .Site.Params.hero.subtitle }}{{ . | markdownify }}{{ end }}
         </div>
+        <div class="intro-lead-in">
+          {{ with .Site.Params.meta_description }}{{ . | markdownify }}{{ end }}
+        </div>
+      </div>
+      <div class="intro-buttons">
+        {{ if .Site.Params.hero.ctaEnable }}
+        <a href="{{ with .Site.Params.hero.ctaButtonTarget }}{{ . }}{{ end }}"
+          class="page-scroll btn
+          btn-xl">{{ with .Site.Params.hero.ctaButtonText }}{{ . }}{{ end }}</a>{{ end }}
+        {{ if .Site.Params.hero.ticketsEnable }}<a
+          href="{{ with .Site.Params.hero.ticketsButtonTarget }}{{ . }}{{ end }}"
+          class="page-scroll btn btn-xl"
+          id="btn-register">{{ with .Site.Params.hero.ticketsButtonText }}{{ . }}{{ end }}</a>{{ end }}
+      </div>
     </div>
+  </div>
 </header>
