--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -1,60 +1,73 @@
 {{ "<!-- Team Section -->" | safeHTML }}
 <div class="container">
 
-    <section id="team" {{ if .Site.Params.team.bg }} class="bg-light-gray" {{ end }}>
+  <section id="team" {{ if .Site.Params.team.bg }} class="bg-light-gray"
+    {{ end }}>
 
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">{{ with .Site.Params.team.title }}{{ . | markdownify }}{{ end }}</h2>
-                <h3 class="section-subheading text-mutedwith ">
-                    {{ with .Site.Params.team.subtitle }}{{ . | markdownify }}{{ end }}</h3>
-            </div>
-        </div>
-        <div class="row flexbox{{ if .Site.Params.team.center }} flexbox-center{{ end }}">
-            {{ range .Site.Data.team.members }}
-            {{ partial "team-member" . }}
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">
+          {{ with .Site.Params.team.title }}{{ . | markdownify }}{{ end }}</h2>
+        <h3 class="section-subheading text-mutedwith ">
+          {{ with .Site.Params.team.subtitle }}{{ . | markdownify }}{{ end }}
+        </h3>
+      </div>
+    </div>
+    <div
+      class="row flexbox{{ if .Site.Params.team.center }} flexbox-center{{ end }}">
+      {{ range .Site.Data.team.members }}
+      {{ partial "team-member" . }}
+      {{ end }}
+    </div>
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 text-center">
+        <p class="large text-muted">
+          {{ with .Site.Params.team.description }}{{ . | markdownify }}{{ end }}
+        </p>
+      </div>
+    </div>
+    {{ if .Site.Data.params.speakers.enable }}
+    <!-- SPEAKERS start -->
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">
+          {{ with .Site.Params.team.speakers }}{{ . | markdownify }}{{ end }}
+        </h2>
+      </div>
+    </div>
+    <div
+      class="row flexbox{{ if .Site.Params.team.center }} flexbox-center{{ end }}">
+      {{ range .Site.Data.speakers }}
+      <div class="col-sm-4 col">
+        <div class="team-member">
+          {{ $url := printf "img/team/%s" .img }}
+          <img src="{{ $url | absURL }}" class="img-responsive img-circle"
+            alt="{{ .name }}">
+          <h3>{{ .name | markdownify }}</h3>
+
+          {{ with .organisation }}
+          <h4>{{ . | markdownify }}</h4>
+          {{ end }}
+
+          {{ with .role }}
+          <h5 class="report">{{ . | markdownify }}</h5>
+          {{ end }}
+
+          <ul class="list-inline social-buttons">
+            {{ range .social }}
+            <li><a href="{{ index . 1 }}"><i class="fa {{ index . 0 }}"></i></a>
+            </li>
             {{ end }}
-        </div>
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <p class="large text-muted">{{ with .Site.Params.team.description }}{{ . | markdownify }}{{ end }}</p>
-            </div>
-        </div>
-        <!-- SPEAKERS start -->
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">{{ with .Site.Params.team.speakers }}{{ . | markdownify }}{{ end }}</h2>
-            </div>
-        </div>
-        <div class="row flexbox{{ if .Site.Params.team.center }} flexbox-center{{ end }}">
-            {{ range .Site.Data.speakers }}
-            <div class="col-sm-4 col">
-                <div class="team-member">
-                    {{ $url := printf "img/team/%s" .img }}
-                    <img src="{{ $url | absURL }}" class="img-responsive img-circle" alt="{{ .name }}">
-                    <h3>{{ .name | markdownify }}</h3>
+          </ul>
 
-                    {{ with .organisation }}
-                    <h4>{{ . | markdownify }}</h4>
-                    {{ end }}
-
-                    {{ with .role }}
-                    <h5 class="report">{{ . | markdownify }}</h5>
-                    {{ end }}
-
-                    <ul class="list-inline social-buttons">
-                        {{ range .social }}
-                        <li><a href="{{ index . 1 }}"><i class="fa {{ index . 0 }}"></i></a></li>
-                        {{ end }}
-                    </ul>
-
-                    {{ with .bio }}
-                    <p class="team-bio">{{ . | markdownify }}</p>
-                    {{ end }}
-                </div>
-            </div>
-            {{ end }}
+          {{ with .bio }}
+          <p class="team-bio">{{ . | markdownify }}</p>
+          {{ end }}
         </div>
-        <!-- SPEAKERS end -->
-    </section>
+      </div>
+      {{ end }}
+    </div>
+    <!-- SPEAKERS end -->
+    {{ end }}
+  </section>
 </div>
