--- a/layouts/partials/diversity-inclusion.html
+++ b/layouts/partials/diversity-inclusion.html
@@ -1,138 +1,189 @@
 {{ "<!-- Diversity -->" | safeHTML }}
 <div class="container">
-    <section id="diversity" {{ if .Site.Params.inclusion.bg }} class="bg-light-gray" {{ end }}>
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Our commitment to diversity and inclusion</h2>
-            </div>
-            <div>
-                <p>The best conferences are the ones where everyone participates. </p>
+  <section id="diversity" {{ if .Site.Params.inclusion.bg }}
+    class="bg-light-gray" {{ end }}>
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Our commitment to diversity and inclusion
+        </h2>
+      </div>
 
-                <p>We want SatRday to be a safe, welcoming space for everyone. To make this happen we are making every
-                    effort to prioritise safety, comfort, diversity and accessibility. Below you can find what we are
-                    doing, what is under consideration and what we decided not to do (for now).</p>
+      <div>
+        <p>The best conferences are the ones where everyone participates. </p>
 
-                <p>We want your feedback! If there is something you feel we could do differently, let us know. Please
-                    tell us your ideas by filling out the contact form below. We treat all submissions confidentially.
-                </p>
+        {{ partial "blockquote-conduct" . }}
 
-                <h4 id="whatwearedoing">What we are doing</h4>
+        <p>We want SatRday to be a safe, welcoming space for everyone. To make
+          this happen we are making every
+          effort to prioritise safety, comfort, diversity and accessibility.
+          Below you can find what we are
+          doing, what is under consideration and what we decided not to do (for
+          now).</p>
 
-                <p><strong>Speaker diversity &amp; quota</strong>
-                    Our aim to achieve a 50% share, i.e. 50% must be made up of women, people of colour, and other
-                    minorities. We do additional research to find relevant speakers from underrepresented groups, which
-                    includes checking networks and social media communities that exist for exactly this purpose. If you
-                    have recommendations for speakers from underrepresented groups, please let us know in our Notes
-                    section in the submission form. </p>
+        <p>We want your feedback! If there is something you feel we could do
+          differently, let us know. Please
+          tell us your ideas by filling out the contact form below. We treat all
+          submissions confidentially.
+        </p>
 
-                <p><strong>Researching speakers</strong>
-                    We request that all potential speakers send us a video of their earlier talk(s), blogs, and also
-                    have a conversation upfront or via a video call. We will not conduct blind selection (i.e. a blind
-                    CFP selection process). </p>
+        <h4 id="whatwearedoing">What we are doing</h4>
 
-                <p><strong>Presentation support</strong>
-                    We offer support to speakers who are new to public speaking by pairing up new speakers with
-                    experienced speakers to give advice and constructive feedback on the presentation material, share
-                    learnings, experiences and helpful tips.</p>
+        <p><strong>Speaker diversity &amp; quota</strong>
+          Our aim to achieve a 50% share, i.e. 50% must be made up of women,
+          people of colour, and other
+          minorities. We do additional research to find relevant speakers from
+          underrepresented groups, which
+          includes checking networks and social media communities that exist for
+          exactly this purpose. If you
+          have recommendations for speakers from underrepresented groups, please
+          let us know in our Notes
+          section in the submission form. </p>
 
-                <p><strong>Scholarships &amp; discounted tickets</strong>
-                    We want to create opportunities for underrepresented participants to attend our event, which is why
-                    we offer registration waver scholarships/free tickets and discounted tickets to cover all or part of
-                    the registration. This includes persons who are unable to attend without some financial assistance,
-                    such as students, post-docs, academic researchers, unemployed/job-seeking persons as well as, but
-                    not limited to persons from underrepresented and/or marginalised groups including persons
-                    identifying as LGBTQ, persons of colour, persons with disabilities, and persons
-                    from developing economies. </p>
+        <p><strong>Researching speakers</strong>
+          We request that all potential speakers send us a video of their
+          earlier talk(s), blogs, and also
+          have a conversation upfront or via a video call. We will not conduct
+          blind selection (i.e. a blind
+          CFP selection process). </p>
 
-                <p><strong>Photo policy</strong>
-                    We will have a photographer at our event. We will check with you at the start of the event if you
-                    are comfortable with having your photo taken. If you would like to opt out of being photographed or
-                    would like a photograph to not be published, please let one of our staff know so we can arrange
-                    this.</p>
+        <p><strong>Presentation support</strong>
+          We offer support to speakers who are new to public speaking by pairing
+          up new speakers with
+          experienced speakers to give advice and constructive feedback on the
+          presentation material, share
+          learnings, experiences and helpful tips.</p>
 
-                <p><strong>Language</strong>
-                    The SatRday event will be hosted in English and we would therefore like to ask all participants to
-                    also speak English when conversing with others, even if you share another language with your
-                    conversation partners. This makes it easier for others to join. </p>
+        <p><strong>Scholarships &amp; discounted tickets</strong>
+          We want to create opportunities for underrepresented participants to
+          attend our event, which is why
+          we offer registration waver scholarships/free tickets and discounted
+          tickets to cover all or part of
+          the registration. This includes persons who are unable to attend
+          without some financial assistance,
+          such as students, post-docs, academic researchers,
+          unemployed/job-seeking persons as well as, but
+          not limited to persons from underrepresented and/or marginalised
+          groups including persons
+          identifying as LGBTQ, persons of colour, persons with disabilities,
+          and persons
+          from developing economies. </p>
 
-                <p><strong>Gender-inclusive language</strong>
-                    We will do our best to use gender-neutral language in all communications. If we make a mistake,
-                    please let us know!</p>
+        <p><strong>Photo policy</strong>
+          We will have a photographer at our event. We will check with you at
+          the start of the event if you
+          are comfortable with having your photo taken. If you would like to opt
+          out of being photographed or
+          would like a photograph to not be published, please let one of our
+          staff know so we can arrange
+          this.</p>
 
-                <p><strong>Reserved accessible seating</strong>
-                    We will reserve accessible seats at the venue on the first row, near exists, toilets, amenities,
-                    etc. Please let us know if you need an accessible seat so we can reserve extra if needed. </p>
+        <p><strong>Language</strong>
+          The SatRday event will be hosted in English and we would therefore
+          like to ask all participants to
+          also speak English when conversing with others, even if you share
+          another language with your
+          conversation partners. This makes it easier for others to join. </p>
 
-                <p><strong>Dietary requirements</strong>
-                    We inquire about dietary requirements during the registration process. </p>
+        <p><strong>Gender-inclusive language</strong>
+          We will do our best to use gender-neutral language in all
+          communications. If we make a mistake,
+          please let us know!</p>
 
-                <p><strong>Instructing staff</strong>
-                    We will discuss our various accessibility and diversity requirements with our hired suppliers.
-                    Although we are not responsible for the suppliers we will enforce diversity inclusion if the need
-                    arises from, e.g. a complaint from a participant. </p>
+        <p><strong>Reserved accessible seating</strong>
+          We will reserve accessible seats at the venue on the first row, near
+          exists, toilets, amenities,
+          etc. Please let us know if you need an accessible seat so we can
+          reserve extra if needed. </p>
 
-                <p><strong>Promote global diversity</strong>
-                    We want to promote global diversity CFP day to encourage everyone that being diversity inclusive is
-                    not as hard as it looks, and there’s plenty of support out there to be inclusive:
-                    https://www.globaldiversitycfpday.com/</p>
+        <p><strong>Dietary requirements</strong>
+          We inquire about dietary requirements during the registration process.
+        </p>
 
-                <p><strong>Childcare services</strong>
-                    We unfortunately cannot provide childcare at this time. We can, however, highly recommend the
-                    following childcare services, both based in Berlin:
-                    <ul>
-                        <li>
-                            <a href="https://extra-arms.com/">Extra Arms</a>
-                        </li>
-                        <li>
-                            <a href="https://www.babysitter-express.de/">Babysitter Express</a>
-                        </li>
-                    </ul>
-                </p>
-                <p><strong>Quiet room</strong>
-                    We have a quiet room available where participants and speakers can retreat, if needed.
-                </p>
+        <p><strong>Instructing staff</strong>
+          We will discuss our various accessibility and diversity requirements
+          with our hired suppliers.
+          Although we are not responsible for the suppliers we will enforce
+          diversity inclusion if the need
+          arises from, e.g. a complaint from a participant. </p>
 
-                <h4 id="whatisunderconstruction">What is under construction</h4>
+        <p><strong>Promote global diversity</strong>
+          We want to promote global diversity CFP day to encourage everyone that
+          being diversity inclusive is
+          not as hard as it looks, and there’s plenty of support out there to be
+          inclusive:
+          https://www.globaldiversitycfpday.com/</p>
 
-                <p><strong>Diversity consultants</strong>
-                    This is something that we will look into for those interested in learning more. </p>
+        <p><strong>Childcare services</strong>
+          We unfortunately cannot provide childcare at this time. We can,
+          however, highly recommend the
+          following childcare services, both based in Berlin:
+          <ul>
+            <li>
+              <a href="https://extra-arms.com/">Extra Arms</a>
+            </li>
+            <li>
+              <a href="https://www.babysitter-express.de/">Babysitter
+                Express</a>
+            </li>
+          </ul>
+        </p>
+        <p><strong>Quiet room</strong>
+          We have a quiet room available where participants and speakers can
+          retreat, if needed.
+        </p>
+
+        <h4 id="whatisunderconstruction">What is under construction</h4>
+
+        <p><strong>Diversity consultants</strong>
+          This is something that we will look into for those interested in
+          learning more. </p>
 
 
-                <p><strong>Wheelchair accessibility</strong>
-                    We are checking if our venue has wheelchair access and where the accessibility entrances and exits
-                    are.</p>
+        <p><strong>Wheelchair accessibility</strong>
+          We are checking if our venue has wheelchair access and where the
+          accessibility entrances and exits
+          are.</p>
 
-                <p><strong>Hearing &amp; Audio loops</strong>
-                    We will look into providing hearing and audio loops </p>
+        <p><strong>Hearing &amp; Audio loops</strong>
+          We will look into providing hearing and audio loops </p>
 
-                <p><strong>Bring your assistant</strong>
-                    We are considering giving free tickets if you need to bring an assistant. We will have more
-                    information on this decision and the requesting process soon. </p>
+        <p><strong>Bring your assistant</strong>
+          We are considering giving free tickets if you need to bring an
+          assistant. We will have more
+          information on this decision and the requesting process soon. </p>
 
-                <p><strong>Gender-inclusive bathrooms</strong>
-                    We are checking if it is possible to have gender-inclusive bathrooms, i.e. bathrooms that reflect
-                    all expressed genders, in our current venue.</p>
+        <p><strong>Gender-inclusive bathrooms</strong>
+          We are checking if it is possible to have gender-inclusive bathrooms,
+          i.e. bathrooms that reflect
+          all expressed genders, in our current venue.</p>
 
-                <p><strong>Volunteers</strong>
-                    We are considering offering free seats to volunteers who help out during the conference.</p>
+        <p><strong>Volunteers</strong>
+          We are considering offering free seats to volunteers who help out
+          during the conference.</p>
 
-                <p><strong>Accessibility fund</strong>
-                    We are considering offering an accessibility fund to cover provisions for people who need them, e.g.
-                    taxi rides, ramps, translators, escorts from airport, etc. in addition to the scholarships and
-                    discounts. </p>
+        <p><strong>Accessibility fund</strong>
+          We are considering offering an accessibility fund to cover provisions
+          for people who need them, e.g.
+          taxi rides, ramps, translators, escorts from airport, etc. in addition
+          to the scholarships and
+          discounts. </p>
 
-                <p><strong>Sign language interpreter</strong>
-                    We will look into having a sign language interpreter to help make conversations inclusive and easy
-                    to join for persons who are deaf/hard-of-hearing. </p>
+        <p><strong>Sign language interpreter</strong>
+          We will look into having a sign language interpreter to help make
+          conversations inclusive and easy
+          to join for persons who are deaf/hard-of-hearing. </p>
 
-                <h4 id="whatwedecidednottodofornow">What we decided not to do (for now)</h4>
+        <h4 id="whatwedecidednottodofornow">What we decided not to do (for now)
+        </h4>
 
-                <p><strong>Live captioning</strong>
-                    At the moment, we have no plans to have live captioning during the event. </p>
+        <p><strong>Live captioning</strong>
+          At the moment, we have no plans to have live captioning during the
+          event. </p>
 
-                <p><strong>Transcriptions &amp; translations on published talks</strong>
-                    Currently, we don’t have plans to offer transcripts and translations on published talks. </p>
-            </div>
-        </div>
-    </section>
+        <p><strong>Transcriptions &amp; translations on published talks</strong>
+          Currently, we don’t have plans to offer transcripts and translations
+          on published talks. </p>
+      </div>
+    </div>
+  </section>
 </div>
